Fix footer text dark mode color

--- a/css/mainStyle.css
+++ b/css/mainStyle.css
@@ -396,6 +396,10 @@ a:active {
     body {
         background-color: var(--dark-background-color);
     }
+    
+    footer {
+        color: var(--dark-main-color);
+    }
 
     div.card,
     div.slim-card {
